fixed the font sizing on mobile devices

--- a/Scripts/teaser4.css
+++ b/Scripts/teaser4.css
@@ -190,14 +190,14 @@ h1 {
   transform: translateY(-50%);
   width: 100%;
   color: rgb(158, 158, 158);
-  font-size: 2.8rem;
+  font-size: 2rem;
   font-family: GiniFont;
   font-weight: lighter;
   text-align: center;
 }
 
 h1 span {
-  margin: 0 -6px;
+  margin: 0 -4px;
   opacity: 0;
   display: inline-block;
   animation: animate 1s linear forwards;
@@ -254,6 +254,16 @@ h1 span:nth-child(18) {
   animation-delay: 6.5s;
 }
 
+@media (min-width: 410px) {
+ h1 {
+  font-size: 2.8rem;
+ }
+
+ h1 span {
+  margin: 0 -6px;
+ }
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 
@@ -286,14 +296,6 @@ h1 span:nth-child(18) {
     font-size: 5rem;
   }
 
-  body {
-    /* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(black), to(white)); */
-    background: -webkit-linear-gradient(left, black 50%, #191919);
-    background: -moz-linear-gradient(left, black 50%,#191919);
-    background: -ms-linear-gradient(left, black 50%,#191919);
-    background: -o-linear-gradient(left, black 50%,#191919);
-    background: linear-gradient(left, black 50%,#191919);
-  }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
@@ -316,6 +318,16 @@ h1 span:nth-child(18) {
   h1 {
     top: 45%;
   }
+
+  body {
+    /* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(black), to(white)); */
+    background: -webkit-linear-gradient(left, black 50%, #191919);
+    background: -moz-linear-gradient(left, black 50%,#191919);
+    background: -ms-linear-gradient(left, black 50%,#191919);
+    background: -o-linear-gradient(left, black 50%,#191919);
+    background: linear-gradient(left, black 50%,#191919);
+  }
+
 }
 
 @media (min-width: 1400px) {
